--- a/web1/src/app/report/inventory-report/inventory-report.component.html
+++ b/web1/src/app/report/inventory-report/inventory-report.component.html
@@ -230,6 +230,7 @@
                         <button type="button" class="me-2" mat-raised-button color="primary" (click)="getInventoryExport()">
                           Quick Download
                         </button>
+                        <button type="button" *ngIf="this.selectedProduct == 'LENS'"  (click)="openModalS(content0000)" mat-raised-button color="primary" >Lens Grid</button>
                       </div>
                     </div>
                   </form>
@@ -1506,4 +1507,158 @@
     </div>
   </div>
 </form>
+</ng-template>
+
+
+<ng-template #content0000 role="document" let-modal>
+  <div class="modal-header" style="height: 50px; border-bottom: #ff651e 3px solid;">
+    <div class="container">
+        <div class="row pt-3">
+            <div class="col-1">
+                <h2 class="modal-title header " id="exampleModalLabel">Grid
+              </h2>
+            </div>
+              <div class="col-xl-2 col-lg-2 col-md-2 col-sm-6 col-4 ms-auto mb-0">
+                <mat-form-field class="example-full-width mb-0">
+                  <mat-label>Index</mat-label>
+                  <mat-select name="SVType" [(ngModel)]="SVType"  #SVTypecontrol >
+                      <mat-option value="1.56">1.56 Index</mat-option>
+                      <mat-option value="1.61">1.61 Index</mat-option>
+                      <mat-option value="1.499">1.499 Index</mat-option>
+                  </mat-select>
+              </mat-form-field>
+
+              </div>
+              <div *ngIf="SVType == '1.56'" class=" col-2  mb-0">
+                <mat-form-field class="example-full-width mb-0">
+                    <mat-label>Select Base Type</mat-label>
+                    <mat-select name="Base" [(ngModel)]="Base"  #Basecontrol (selectionChange)="baseChange1(this.Base,'1.56')">
+                        <mat-option value="12">Base 12</mat-option>
+                        <mat-option value="10">Base 10</mat-option>
+                        <mat-option value="8">Base 8</mat-option>
+                        <mat-option value="7">Base 7</mat-option>
+                        <mat-option value="6">Base 6</mat-option>
+                        <mat-option value="5">Base 5</mat-option>
+                        <mat-option value="4">Base 4</mat-option>
+                        <mat-option value="3">Base 3</mat-option>
+                        <mat-option value="2">Base 2</mat-option>
+                        <mat-option value="1">Base 1</mat-option>
+                        <mat-option value="0.5">Base 0.5</mat-option>
+                    </mat-select>
+                </mat-form-field>
+            </div>
+            <div *ngIf="SVType == '1.61'" class=" col-2   mb-0">
+              <mat-form-field class="example-full-width mb-0">
+                  <mat-label>Select Base Type</mat-label>
+                  <mat-select name="Base" [(ngModel)]="Base"  #Basecontrol (selectionChange)="baseChange1(this.Base,'1.61')">
+                      <mat-option value="12">Base 12</mat-option>
+                      <mat-option value="11">Base 11</mat-option>
+                      <mat-option value="10">Base 10</mat-option>
+                      <mat-option value="9">Base 9</mat-option>
+                      <mat-option value="8">Base 8</mat-option>
+                      <mat-option value="7">Base 7</mat-option>
+                      <mat-option value="6">Base 6</mat-option>
+                      <mat-option value="5">Base 5</mat-option>
+                      <mat-option value="4">Base 4</mat-option>
+                      <mat-option value="3">Base 3</mat-option>
+                      <mat-option value="2">Base 2</mat-option>
+                      <mat-option value="1">Base 1</mat-option>
+                      <mat-option value="0.5">Base 0.5</mat-option>
+                  </mat-select>
+              </mat-form-field>
+          </div>
+          <div *ngIf="SVType == '1.499'" class=" col-2  mb-0">
+              <mat-form-field class="example-full-width mb-0">
+                  <mat-label>Select Base Type</mat-label>
+                  <mat-select name="Base" [(ngModel)]="Base"  #Basecontrol (selectionChange)="baseChange1(this.Base,'1.499')">
+                      <mat-option value="12">Base 12</mat-option>
+                      <mat-option value="11">Base 11</mat-option>
+                      <mat-option value="10">Base 10</mat-option>
+                      <mat-option value="9">Base 9</mat-option>
+                      <mat-option value="8">Base 8</mat-option>
+                      <mat-option value="7">Base 7</mat-option>
+                      <mat-option value="6">Base 6</mat-option>
+                      <mat-option value="5">Base 5</mat-option>
+                      <mat-option value="4">Base 4</mat-option>
+                      <mat-option value="2">Base 2</mat-option>
+                      <mat-option value="0">Base 0</mat-option>
+                  </mat-select>
+              </mat-form-field>
+          </div>
+          <div class="col-xl-2 col-lg-2 col-md-2 col-sm-6 col-4  mb-0">
+            <mat-form-field class="example-full-width mb-0">
+                <mat-label>Axis</mat-label>
+                <mat-select name="axis" [(ngModel)]="axisFilter" #axiscontrol (selectionChange)="Axis1212()">
+                    <mat-option [value]=0 >0</mat-option>
+                    <mat-option [value]="a.Name" *ngFor="let a of axisList">
+                        {{a.Name}}
+                    </mat-option>
+                </mat-select>
+            </mat-form-field>
+        </div>
+        <div class="col-xl-2 col-lg-2 col-md-2 col-sm-6 col-4 mb-0">
+          <mat-form-field class="example-full-width mb-0">
+              <mat-label>Addtion</mat-label>
+              <mat-select name="addtion" [(ngModel)]="addtionFilter" #addtioncontrol (selectionChange)="AddFilter()">
+                <mat-option [value]=0 >0</mat-option>
+                  <mat-option [value]="ad.Name" *ngFor="let ad of additionList">
+                      {{ad.Name}}
+                  </mat-option>
+              </mat-select>
+          </mat-form-field>
+      </div>
+              <div class="col-xl-1 col-lg-1 col-md-2 col-sm-6 col-4  mb-0">
+                <button  mat-raised-button color="primary" type="button"
+                (click)="exportAsXLSXlens()"> Excel </button> 
+              </div>
+        </div>
+    </div>
+    <button type="button" class="btn-close" aria-label="Close" (click)="modal.dismiss('Cross click')"></button>
+</div>
+<div class="modal-body p-0">
+    <div class="row">
+        <div class="col-12 mx-auto" style="overflow: scroll;height: 550px;">
+          <div class="container p-0" *ngIf="dataSource.length">
+            <table mat-table [dataSource]="dataSource" class="mat-elevation-z8"
+                style="overflow: auto; height: 480px; width: 100%;" id="lensExcel">
+                <!-- CYL Column -->
+                <ng-container matColumnDef="cyl">
+                    <th mat-header-cell *matHeaderCellDef
+                        style="font-size: 16px;color:rgb(0 0 0); border: 1px solid; padding: 0;text-align: center !important;">
+                        CYL  <br> SPH </th>
+                    <td mat-cell *matCellDef="let element"
+                        style="font-size: 16px;border: 1px solid   ;  padding: 3px;  text-align: center !important; font-weight: 500;background-color: #dddddd;"
+                        class="hovertblrow-col"> {{element.sph}} </td>
+                </ng-container>
+                <!-- Dynamic Columns for SPH -->
+                <ng-container *ngFor="let cyl of cylValues; let i = index" [matColumnDef]="cyl">
+                    <th mat-header-cell *matHeaderCellDef
+                        style="font-size: 16px; padding-top: 10px; color: rgb(0 0 0); border: 1px solid; text-align: center !important; background-color: #dddddd;">
+                      {{ cyl }}
+                    </th>
+                    <td mat-cell *matCellDef="let element"
+                        [style.backgroundColor]="element[cyl].isBlue ? '#fff' : 'transparent'"
+                        [style.border]="element[cyl].isBlue ? '1px solid' : 'none'">
+                      <ng-container *ngIf="element[cyl].isBlue">
+                        <span class="inputBoxTD" 
+                               [ngStyle]="{ 'color': element[cyl].value == 0 ? '#242424' : 'red', 'font-weight': element[cyl].value == 0 ? 'normal' : '900' }"
+                               style="border: none !important;background: none;" disabled >
+                               {{element[cyl].value}}
+                              </span>
+                      </ng-container>
+                    </td>
+                  </ng-container>
+                <tr mat-header-row *matHeaderRowDef="displayedColumns" style="height: -1px !important;"
+                    class="hovertblrow-col"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;"
+                    [ngClass]="{'highlight-row': isHoveredRow(row)}" (click)="hoveredRow = row"
+                    (mouseleave)="hoveredRow = null" style="height: -1px !important;" class="hovertblrow-col">
+                </tr>
+            </table>
+        </div>
+        </div>
+      
+    </div>
+</div>
+  
 </ng-template>
