--- a/web1/src/app/report/purchase-report/purchase-report.component.html
+++ b/web1/src/app/report/purchase-report/purchase-report.component.html
@@ -1393,14 +1393,13 @@
 <ng-template #content00 role="document" let-modal>
   <div class="modal-header" style="height: 50px; border-bottom: #ff651e 3px solid;">
     <div class="container">
-        <div class="row">
-            <div class="col-4">
-                <h2 class="modal-title header pt-2" id="exampleModalLabel">Lens Grid
-                <button class="ms-3" mat-raised-button color="primary" type="button"
-                (click)="exportAsXLSXlens()"> Excel </button> </h2>
+        <div class="row pt-3">
+            <div class="col-1">
+                <h2 class="modal-title header " id="exampleModalLabel">Grid
+              </h2>
             </div>
-            <div class="col-4 pt-2">
-                <button mat-raised-button
+             <!--  <div class="col-4 ">
+               <button mat-raised-button
                     [ngStyle]="{'background-color': isActive1 ? '#3f51b5' : '#dddddd','color':isActive1 ? '#fff' : '#000'}"
                     (click)="plusToplus('+sph+cyl'); toggleActive(1)">
                     +/+
@@ -1416,18 +1415,101 @@
                     [ngStyle]="{'background-color': isActive3 ? '#3f51b5' : '#dddddd','color':isActive3 ? '#fff' : '#000'}"
                     (click)="plusToplus('+sph-cyl'); toggleActive(3)">
                     +/-
-                </button>
+                </button> 
+            </div> -->
+             
+              <div class="col-xl-2 col-lg-2 col-md-2 col-sm-6 col-4 ms-auto mb-0">
+                <mat-form-field class="example-full-width mb-0">
+                  <mat-label>Index</mat-label>
+                  <mat-select name="SVType" [(ngModel)]="SVType"  #SVTypecontrol >
+                      <mat-option value="1.56">1.56 Index</mat-option>
+                      <mat-option value="1.61">1.61 Index</mat-option>
+                      <mat-option value="1.499">1.499 Index</mat-option>
+                  </mat-select>
+              </mat-form-field>
+
+              </div>
+              <div *ngIf="SVType == '1.56'" class=" col-2  mb-0">
+                <mat-form-field class="example-full-width mb-0">
+                    <mat-label>Select Base Type</mat-label>
+                    <mat-select name="Base" [(ngModel)]="Base"  #Basecontrol (selectionChange)="baseChange1(this.Base,'1.56')">
+                        <mat-option value="12">Base 12</mat-option>
+                        <mat-option value="10">Base 10</mat-option>
+                        <mat-option value="8">Base 8</mat-option>
+                        <mat-option value="7">Base 7</mat-option>
+                        <mat-option value="6">Base 6</mat-option>
+                        <mat-option value="5">Base 5</mat-option>
+                        <mat-option value="4">Base 4</mat-option>
+                        <mat-option value="3">Base 3</mat-option>
+                        <mat-option value="2">Base 2</mat-option>
+                        <mat-option value="1">Base 1</mat-option>
+                        <mat-option value="0.5">Base 0.5</mat-option>
+                    </mat-select>
+                </mat-form-field>
             </div>
+            <div *ngIf="SVType == '1.61'" class=" col-2   mb-0">
+              <mat-form-field class="example-full-width mb-0">
+                  <mat-label>Select Base Type</mat-label>
+                  <mat-select name="Base" [(ngModel)]="Base"  #Basecontrol (selectionChange)="baseChange1(this.Base,'1.61')">
+                      <mat-option value="12">Base 12</mat-option>
+                      <mat-option value="11">Base 11</mat-option>
+                      <mat-option value="10">Base 10</mat-option>
+                      <mat-option value="9">Base 9</mat-option>
+                      <mat-option value="8">Base 8</mat-option>
+                      <mat-option value="7">Base 7</mat-option>
+                      <mat-option value="6">Base 6</mat-option>
+                      <mat-option value="5">Base 5</mat-option>
+                      <mat-option value="4">Base 4</mat-option>
+                      <mat-option value="3">Base 3</mat-option>
+                      <mat-option value="2">Base 2</mat-option>
+                      <mat-option value="1">Base 1</mat-option>
+                      <mat-option value="0.5">Base 0.5</mat-option>
+                  </mat-select>
+              </mat-form-field>
+          </div>
+          <div *ngIf="SVType == '1.499'" class=" col-2  mb-0">
+              <mat-form-field class="example-full-width mb-0">
+                  <mat-label>Select Base Type</mat-label>
+                  <mat-select name="Base" [(ngModel)]="Base"  #Basecontrol (selectionChange)="baseChange1(this.Base,'1.499')">
+                      <mat-option value="12">Base 12</mat-option>
+                      <mat-option value="11">Base 11</mat-option>
+                      <mat-option value="10">Base 10</mat-option>
+                      <mat-option value="9">Base 9</mat-option>
+                      <mat-option value="8">Base 8</mat-option>
+                      <mat-option value="7">Base 7</mat-option>
+                      <mat-option value="6">Base 6</mat-option>
+                      <mat-option value="5">Base 5</mat-option>
+                      <mat-option value="4">Base 4</mat-option>
+                      <mat-option value="2">Base 2</mat-option>
+                      <mat-option value="0">Base 0</mat-option>
+                  </mat-select>
+              </mat-form-field>
+          </div>
+          <div class="col-xl-2 col-lg-2 col-md-2 col-sm-6 col-4  mb-0">
+            <mat-form-field class="example-full-width mb-0">
+                <mat-label>Axis</mat-label>
+                <mat-select name="axis" [(ngModel)]="axisFilter" #axiscontrol (selectionChange)="Axis1212()">
+                    <mat-option [value]=0 >0</mat-option>
+                    <mat-option [value]="a.Name" *ngFor="let a of axisList">
+                        {{a.Name}}
+                    </mat-option>
+                </mat-select>
+            </mat-form-field>
+        </div>
+        <div class="col-xl-2 col-lg-2 col-md-2 col-sm-6 col-4 mb-0">
+          <mat-form-field class="example-full-width mb-0">
+              <mat-label>Addtion</mat-label>
+              <mat-select name="addtion" [(ngModel)]="addtionFilter" #addtioncontrol (selectionChange)="AddFilter()">
+                <mat-option [value]=0 >0</mat-option>
+                  <mat-option [value]="ad.Name" *ngFor="let ad of additionList">
+                      {{ad.Name}}
+                  </mat-option>
+              </mat-select>
+          </mat-form-field>
+      </div>
               <div class="col-xl-1 col-lg-1 col-md-2 col-sm-6 col-4  mb-0">
-                  <mat-form-field class="example-full-width mb-0">
-                      <mat-label>Axis</mat-label>
-                      <mat-select name="axis" [(ngModel)]="axisFilter" #axiscontrol (selectionChange)="Axis1212()">
-                          <mat-option [value]=0 >0</mat-option>
-                          <mat-option [value]="a.Name" *ngFor="let a of axisList">
-                              {{a.Name}}
-                          </mat-option>
-                      </mat-select>
-                  </mat-form-field>
+                <button  mat-raised-button color="primary" type="button"
+                (click)="exportAsXLSXlens()"> Excel </button> 
 
               </div>
             <!-- <div class="col-1 pt-1">
@@ -1465,40 +1547,58 @@
 <div class="modal-body p-0">
     <div class="row">
         <div class="col-12 mx-auto" style="overflow: scroll;height: 550px;">
-            <div class="container p-0" *ngIf="dataSource.length">
-                <table mat-table [dataSource]="dataSource" class="mat-elevation-z8"
-                    style="overflow: auto; height: 480px; width: 100%;" id="lensExcel">
-                    <!-- CYL Column -->
-                    <ng-container matColumnDef="cyl">
-                        <th mat-header-cell *matHeaderCellDef
-                            style="font-size: 18px;color:rgb(0 0 0); border: 1px solid; padding: 0;text-align: center !important;">
-                             CYL <br> SPH  </th>
-                        <td mat-cell *matCellDef="let element"
-                            style="font-size: 16px;border: 1px solid   ;  padding: 3px;  text-align: center !important; font-weight: 500;background-color: #dddddd;"
-                            class="hovertblrow-col"> {{element.sph}} <span *ngIf="this.axisFilter != 0"> / {{this.axisFilter}}</span> </td>
-                    </ng-container>
-                    <!-- Dynamic Columns for SPH -->
-                    <ng-container *ngFor="let cyl of cylValues; let i = index" [matColumnDef]="cyl">
-                        <th mat-header-cell *matHeaderCellDef
-                            style="font-size: 16px; padding-top: 10px; color: rgb(0 0 0); border: 1px solid; text-align: center !important; background-color: #dddddd;">
-                            {{cyl}} <span *ngIf="this.axisFilter != 0"> / {{this.axisFilter}}</span></th>
-                        <td mat-cell *matCellDef="let element" class="hovertblrow-col"
-                            [ngClass]="{'highlight-column': clickedColumnIndex === i}"
-                            style="font-size: 16px;color: rgb(61, 61, 61); border: 1px solid" [ngStyle]="{ 'color': element[cyl] == 0 ? '#242424' : 'red', 'font-weight': element[cyl] == 0 ? 'normal' : '900' }">
-                            {{element[cyl]}} 
-                            <!-- <input class="inputBoxTD" type="number" [(ngModel)]="element[cyl]" min="0"
-                                (focus)="onInputFocus(i, element, cyl)" (mouseleave)="onInputClick(null)"
-                                (blur)="onInputBlur(element, cyl)" />--> 
-                        </td>
-                    </ng-container>
-                    <tr mat-header-row *matHeaderRowDef="displayedColumns" style="height: 0px;"
-                        class="hovertblrow-col"></tr>
-                    <tr mat-row *matRowDef="let row; columns: displayedColumns;"
-                        [ngClass]="{'highlight-row': isHoveredRow(row)}" (click)="hoveredRow = row"
-                        (mouseleave)="hoveredRow = null" style="height: 0px;" class="hovertblrow-col">
-                    </tr>
-                </table>
-            </div>
+          <div class="container p-0" *ngIf="dataSource.length">
+            <table mat-table [dataSource]="dataSource" class="mat-elevation-z8"
+                style="overflow: auto; height: 480px; width: 100%;" id="lensExcel">
+                <!-- CYL Column -->
+                <ng-container matColumnDef="cyl">
+                    <th mat-header-cell *matHeaderCellDef
+                        style="font-size: 16px;color:rgb(0 0 0); border: 1px solid; padding: 0;text-align: center !important;">
+                        CYL  <br> SPH </th>
+                    <td mat-cell *matCellDef="let element"
+                        style="font-size: 16px;border: 1px solid   ;  padding: 3px;  text-align: center !important; font-weight: 500;background-color: #dddddd;"
+                        class="hovertblrow-col"> {{element.sph}} </td>
+                </ng-container>
+                <!-- Dynamic Columns for SPH -->
+                <ng-container *ngFor="let cyl of cylValues; let i = index" [matColumnDef]="cyl">
+                    <th mat-header-cell *matHeaderCellDef
+                        style="font-size: 16px; padding-top: 10px; color: rgb(0 0 0); border: 1px solid; text-align: center !important; background-color: #dddddd;">
+                      {{ cyl }}
+                    </th>
+                    <!-- <td mat-cell *matCellDef="let element"
+                        [style.backgroundColor]="element[cyl].isBlue ? '#fff' : 'transparent'"
+                        [style.border]="element[cyl].isBlue ? '1px solid' : 'none'">
+                      <ng-container *ngIf="element[cyl].isBlue">
+                        <input class="inputBoxTD" type="number" [(ngModel)]="element[cyl].value" min="0"
+                               [ngStyle]="{ 'color': element[cyl].value == 0 ? '#242424' : 'red', 'font-weight': element[cyl].value == 0 ? 'normal' : '900' }"
+                               style="border: none !important;background: none;" disabled />
+                      </ng-container>
+                    </td> -->
+                    <td mat-cell *matCellDef="let element"
+                        [style.backgroundColor]="element[cyl].isBlue ? '#fff' : 'transparent'"
+                        [style.border]="element[cyl].isBlue ? '1px solid' : 'none'">
+                      <ng-container *ngIf="element[cyl].isBlue">
+                        <span class="inputBoxTD" 
+                               [ngStyle]="{ 'color': element[cyl].value == 0 ? '#242424' : 'red', 'font-weight': element[cyl].value == 0 ? 'normal' : '900' }"
+                               style="border: none !important;background: none;" disabled >
+                               {{element[cyl].value}}
+                              </span>
+
+
+                      </ng-container>
+                    </td>
+
+                
+
+                  </ng-container>
+                <tr mat-header-row *matHeaderRowDef="displayedColumns" style="height: -1px !important;"
+                    class="hovertblrow-col"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;"
+                    [ngClass]="{'highlight-row': isHoveredRow(row)}" (click)="hoveredRow = row"
+                    (mouseleave)="hoveredRow = null" style="height: -1px !important;" class="hovertblrow-col">
+                </tr>
+            </table>
+        </div>
         </div>
         <!-- product-quantity-grid.component.html -->
         <!-- <div *ngIf="axisAddEyeShow == true" class="row ms-3">
@@ -1544,10 +1644,10 @@
                     </mat-error>
                 </mat-form-field>
             </div> -->
-            <div class="col-xl-1 col-lg-1 col-md-2 col-sm-6 col-4  mb-0">
+            <!-- <div class="col-xl-1 col-lg-1 col-md-2 col-sm-6 col-4  mb-0">
                 <mat-form-field class="example-full-width mb-0">
                     <mat-label>Qty++</mat-label>
-                    <input matInput name="quantity" value="{{this.pp}}" #quantitycontrol [autocomplete]="false"
+                    <input matInput name="pp" value="{{this.pp}}" #quantitycontrol [autocomplete]="false"
                         disabled style="color: red !important; font-weight:700;">
                     <mat-error>
                         Total Amount is required
@@ -1557,7 +1657,7 @@
             <div class="col-xl-1 col-lg-1 col-md-2 col-sm-6 col-4  mb-0">
                 <mat-form-field class="example-full-width mb-0">
                     <mat-label>Qty--</mat-label>
-                    <input matInput name="quantity" value="{{this.mm}}" #quantitycontrol [autocomplete]="false"
+                    <input matInput name="mm" value="{{this.mm}}" #quantitycontrol [autocomplete]="false"
                         disabled style="color: red !important; font-weight:700;">
                     <mat-error>
                         Total Amount is required
@@ -1567,7 +1667,7 @@
             <div class="col-xl-1 col-lg-1 col-md-2 col-sm-6 col-4  mb-0">
                 <mat-form-field class="example-full-width mb-0">
                     <mat-label>Qty+-</mat-label>
-                    <input matInput name="quantity" value="{{this.pm}}" #quantitycontrol [autocomplete]="false"
+                    <input matInput name="pm" value="{{this.pm}}" #quantitycontrol [autocomplete]="false"
                         disabled style="color: red !important; font-weight:700;">
                     <mat-error>
                         Total Amount is required
@@ -1577,13 +1677,13 @@
             <div class="col-xl-1 col-lg-1 col-md-2 col-sm-6 col-4  mb-0">
                 <mat-form-field class="example-full-width mb-0">
                     <mat-label>Total Qty</mat-label>
-                    <input matInput name="quantity" value="{{this.lenQty}}" #lenQtycontrol [autocomplete]="false"
+                    <input matInput name="lenQty" value="{{this.lenQty}}" #lenQtycontrol [autocomplete]="false"
                         disabled style="color: red !important; font-weight:700;">
                     <mat-error>
                         Total Amount is required
                     </mat-error>
                 </mat-form-field>
-            </div>
+            </div> -->
             <!-- <div class="col-xl-1 col-lg-1 col-md-2 col-sm-6 col-4  mb-0">
                 <mat-form-field class="example-full-width mb-0">
                     <mat-label>Gst%</mat-label>
