--- a/web1/src/app/inventory/order-form/order-form.component.html
+++ b/web1/src/app/inventory/order-form/order-form.component.html
@@ -15,9 +15,9 @@
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Order Status </mat-label>
                                         <mat-select name="Status" [(ngModel)]="data.ProductStatus" #singleSelect>
-                                            <mat-option value="OrderRequset">Order Requset</mat-option>
-                                            <mat-option value="OrderTransfer">Order Transfer</mat-option>
-                                            <mat-option value="OrderComplete">Order Complete</mat-option>
+                                            <mat-option value="Order Request">Order Request</mat-option>
+                                            <mat-option value="Order Transfer">Order Transfer</mat-option>
+                                            <mat-option value="Order Complete">Order Complete</mat-option>
                                         </mat-select>
                                         <mat-error>
                                             Select Order Status
